# sdlccp

./: Cargo.toml  README.md  go.mod  go.sum
examples/: examples.md
go-grpc-gateway/: main.go
go-tools/: go.mod  go.sum
proto/: buf.gen.yaml
proto/sdlc_control_plane/v1alpha1/: namespace_service.proto  policy_service.proto
sdlccp-grpc-server/: Cargo.toml  build.rs
sdlccp-grpc-server/src/: main.rs
sdlccp-grpc-server/src/api/: mod.rs
sdlccp-grpc-server/src/services/: mod.rs
sdlccp-grpc-server/src/services/namespace/: inmemory.rs  mod.rs
sdlccp-grpc-server/src/services/policy/: inmemory.rs
